--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>prueba</title>
   </head>
   <body>
+    <input type="file" id="avatar" name="avatar" accept="image/png, image/jpeg">
 
   </body>
 </html>
