--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <title>prueba</title>
 </head>
 <body>
-  <div style='margin:50px' >
-    <div class="col s6 offset-s3 blue">
+  <div style='margin:50px' class="row" >
+    <div class="col s6 ">
       <form  action="" id="form_subir" >
           <div class="file-field input-field">
             <div class="btn">
@@ -31,6 +31,14 @@
         <button type="button" id="cancelar">Cancelar</button>
         <button type="submit" name="enviar">Enviar</button>
       </form>
+    </div>
+    <div class="col s6">
+      <div id="contenedor_tabla">
+        <!-- desde php -->
+      </div>
+    </div>
+    <div class="col s6">
+      <button type="button" name="button" ></button>
     </div>
   </div>
   <script src="js/main.js" charset="utf-8"></script>
